kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # название деплоймента
  name: sender-deployment
  labels:
    app: sender-deploy-label
spec:
  # Количество реплик
  replicas: 1
  # Указывает, с какими подами будет работать деплоймент
  selector:
    #Поды, у которых есть такой label
    matchLabels:
      project: sender-pod
  #Описание подов этого деплоймента
  template:
    metadata:
      name: sender-pod
      #Очевидно, что должны быть такие же labels, какие мы указали в matchLabels в деплойменте
      labels:
        project: sender-pod
    spec:
      #Описываем, какие контейнеры будут в этом поде
      containers:
        - name: sender-container
          image: sender
          # образ никогда не будет скачиваться из-вне, только из имеющихся уже на устройстве локально
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  # название деплоймента
  name: receiver-deployment
  labels:
    app: receiver-deploy-label
spec:
  # Количество реплик
  replicas: 1
  # Указывает, с какими подами будет работать деплоймент
  selector:
    #Поды, у которых есть такой label
    matchLabels:
      project: receiver-pod
  #Описание подов этого деплоймента
  template:
    metadata:
      name: receiver-pod
      #Очевидно, что должны быть такие же labels, какие мы указали в matchLabels в деплойменте
      # По этим labels так же будут искать Services
      labels:
        project: receiver-pod
    spec:
      #Описываем, какие контейнеры будут в этом поде
      containers:
        - name: receiver-container
          image: receiver
          # образ никогда не будет скачиваться из-вне, только из имеющихся уже на устройстве локально
          imagePullPolicy: Never
          ports:
            # Порт контейнера
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: sender-service
  labels:
spec:
  # На какие поды будет работать этот сервис
  selector:
    # все поды с таким лейблом
    project: sender-pod
  ports:
    - name: sender-port
      protocol: TCP
      # Порт на сервисе
      port: 8082
      # Порт на поде
      targetPort: 8082
  type: NodePort
