ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-manifest
  namespace: test-namespace
spec:
  rules:
    - host: sender.ru
      http:
        paths:
          - path: /sender
            pathType: Prefix
            backend:
              service:
                name: sender-service
                port:
                  number: 8082
    - host: receiver.ru
      http:
        paths:
          - path: /receiver
            pathType: Prefix
            backend:
              service:
                name: receiver-service
                port:
                  number: 8081
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: test-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app : nginx-pod
  template:
    metadata:
      labels:
        app : nginx-pod
    spec:
      serviceAccountName: nginx-ingress-sa
      automountServiceAccountToken: true
      containers:
        - image: nginx/nginx-ingress:2.4.0
          imagePullPolicy: IfNotPresent
          name: nginx-container
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: readiness-port
              containerPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  # annotations:
  #   ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: nginx.org/ingress-controller

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
  namespace: test-namespace
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 443
      targetPort: 443
      protocol: TCP
      name: https
  selector:
    app: nginx-pod
